2007-09-21  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/CMakeLists.txt: Added new files to build, removed old files and
	added SDL_tff to the required libraries.
	* src/gui/truetypefont.h: Remove duplicated contents.

2007-09-20  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/browserbox.cpp: Fixed missing const qualifier.
	* src/gui/windowlistener.h: Reduced warning about unused parameter.
	* src/particle.h, src/particle.cpp: Moved function out of header file.
	* src/net/chathandler.cpp: Removed useless include.
	* src/utils/trim.h: Fixed storage qualifier.
	* src/Makefile.am, src/gui/sdlinput.cpp, src/gui/sdlinput.h: Modified
	Guichan SDL input handler, so that it supports high characters.
	* src/gui/textfield.cpp, src/gui/textfield.h: Took over handling of
	keypresses in textfields, so that utf8 characters are supported.
	* src/gui/browserbox.cpp: Fixed improper splitting of characters.
	* src/gui/gui.cpp, src/gui/gui.h, src/game.cpp, src/main.cpp: Changed
	the input handler. Moved away from image font so that non-latin
	characters are supported.

2007-09-16  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/button.cpp: Fixed improper const qualifier.

2007-09-12  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/items.xml, data/equipment.xml: Added temporary weapon IDs below
	256 to use as view-ID in eAthena's item DB.
	* src/gui/shoplistbox.cpp, src/gui/buy.h, src/gui/buy.cpp: Allowed
	selection of items that cannot be afforded, so that their descriptions
	are still accessible. Also made sure the player's money value of
	ShopItemList gets updated.

2007-09-11  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/gui/chat.cpp, tmw.cbp: Fixed admin commands.

2007-09-10  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* configure.ac, data/fonts/dejavusans.ttf,
	src/gui/browserbox.cpp, src/gui/browserbox.h, src/gui/gui.cpp,
	src/gui/truetypefont.cpp, src/gui/truetypefont.h, src/gui/window.cpp,