@@ -3,6 +3,8 @@
 	* src/CMakeLists.txt: Added new files to build, removed old files and
 	added SDL_tff to the required libraries.
 	* src/gui/truetypefont.h: Remove duplicated contents.
+	* src/gui/browserbox.cpp: Refactor the way in which browser box text
+	is drawn and wrapped.
 
 2007-09-20  Guillaume Melquiond  <guillaume.melquiond@gmail.com>
 
